@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=src/gllib --m4-base=src/glm4 --doc-base=doc --aux-dir=src/build-aux --libtool --macro-prefix=gl fnmatch-gnu gettext havelib link-follow localcharset regex stdbool stdint streq uniname/uniname unitypes uniwidth/width
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=src/gllib --m4-base=src/glm4 --doc-base=doc --aux-dir=src/build-aux --libtool --macro-prefix=gl fnmatch-gnu gettext havelib link-follow localcharset nocrash regex stdbool stdint streq uniname/uniname unitypes uniwidth/width
 
 AUTOMAKE_OPTIONS = 1.5 gnits subdir-objects
 
